--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,35 @@
 __pycache__
 .DS_Store
+
+# Node modules and build files
+player/player-ui/node_modules/
+player/player-ui/build/
+
+# Dependency directories
+/.pnp
+.pnp.js
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# Editor and system files
+.DS_Store
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Misc
+coverage/
+*.log
